# heal

./: .gitconfig  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  deny.toml  dist-workspace.toml  plugins
crates/cli/: Cargo.toml
crates/cli/plugins/heal/: plugin.json
crates/cli/plugins/heal/hooks/: claude-post-tool-use.sh  claude-stop.sh
crates/cli/plugins/heal/skills/check-complexity/: SKILL.md
crates/cli/plugins/heal/skills/check-duplication/: SKILL.md
crates/cli/plugins/heal/skills/heal-cli/: SKILL.md
crates/cli/plugins/heal/skills/heal-code-check/: SKILL.md
crates/cli/plugins/heal/skills/heal-code-check/references/: architecture.md  metrics.md  readability.md
crates/cli/plugins/heal/skills/heal-code-fix/: SKILL.md
crates/cli/plugins/heal/skills/heal-code-patch/: SKILL.md
crates/cli/plugins/heal/skills/heal-code-review/: SKILL.md
crates/cli/plugins/heal/skills/heal-code-review/references/: architecture.md
crates/cli/plugins/heal/skills/heal-config/: SKILL.md
crates/cli/plugins/heal/skills/heal-fix/: SKILL.md
crates/cli/queries/go/: ccn.scm  cognitive.scm  functions.scm  lcom.scm
crates/cli/queries/javascript/: ccn.scm  cognitive.scm  functions.scm  lcom.scm
crates/cli/queries/python/: ccn.scm  cognitive.scm  functions.scm  lcom.scm
crates/cli/queries/rust/: ccn.scm  cognitive.scm  lcom.scm
crates/cli/queries/scala/: ccn.scm  cognitive.scm  functions.scm  lcom.scm
crates/cli/queries/typescript/: lcom.scm
crates/cli/skills/heal-cli/: SKILL.md
crates/cli/skills/heal-code-patch/: SKILL.md
crates/cli/skills/heal-code-review/: SKILL.md
crates/cli/skills/heal-code-review/references/: architecture.md  metrics.md
crates/cli/skills/heal-config/: SKILL.md
crates/cli/skills/heal-config/references/: config.md
crates/cli/skills/heal-doc-pair-setup/: SKILL.md
crates/cli/skills/heal-doc-pair-setup/references/: doc-pairs-schema.md
crates/cli/skills/heal-doc-patch/: SKILL.md
crates/cli/skills/heal-doc-review/: SKILL.md
crates/cli/skills/heal-doc-review/references/: metrics.md
crates/cli/skills/heal-doc-scaffold/: SKILL.md
crates/cli/skills/heal-doc-scaffold/references/: page-catalog.md  page-templates.md  wiki-organization.md
crates/cli/skills/heal-setup/: SKILL.md
crates/cli/skills/heal-setup/references/: config.md
crates/cli/skills/heal-test-patch/: SKILL.md
crates/cli/skills/heal-test-reporter-setup/: SKILL.md
crates/cli/skills/heal-test-review/: SKILL.md
crates/cli/src/: claude_settings.rs  cli.rs  feature.rs  finding.rs  lib.rs  main.rs  observers.rs  plugin_assets.rs  skill_assets.rs  snapshot.rs  test_support.rs
crates/cli/src/commands/: cache.rs  calibrate.rs  check.rs  compact.rs  diff.rs  fix.rs  hook.rs  hook_install.rs  init.rs  logs.rs  mark.rs  mark_fixed.rs  metrics.rs  mod.rs  skills.rs  status.rs
crates/cli/src/commands/metrics/: churn.rs  complexity.rs  coupling.rs  doc_coverage.rs  doc_drift.rs  doc_freshness.rs  doc_link_health.rs  duplication.rs  hotspot.rs  lcom.rs  loc.rs  mod.rs  orphan_pages.rs  section.rs  todo_density.rs
crates/cli/src/commands/metrics/code/: change_coupling.rs  churn.rs  complexity.rs  duplication.rs  hotspot.rs  lcom.rs  loc.rs  mod.rs
crates/cli/src/commands/metrics/docs/: coverage.rs  drift.rs  freshness.rs  hotspot.rs  link_health.rs  mod.rs  orphan_pages.rs  todo_density.rs
crates/cli/src/commands/metrics/test/: coverage.rs  hotspot.rs  mod.rs  skip_ratio.rs
crates/cli/src/core/: accepted.rs  calibration.rs  check_cache.rs  compaction.rs  config.rs  doc_pairs.rs  error.rs  eventlog.rs  finding.rs  findings_cache.rs  fs.rs  hash.rs  mod.rs  monorepo.rs  paths.rs  severity.rs  snapshot.rs  state.rs  term.rs
crates/cli/src/observer/: change_coupling.rs  churn.rs  doc_coverage.rs  doc_drift.rs  doc_freshness.rs  doc_link_health.rs  doc_markdown.rs  duplication.rs  git.rs  hotspot.rs  lang.rs  lcom.rs  loc.rs  mod.rs  orphan_pages.rs  todo_density.rs  walk.rs
crates/cli/src/observer/code/: change_coupling.rs  churn.rs  duplication.rs  hotspot.rs  lcom.rs  loc.rs  mod.rs
crates/cli/src/observer/code/complexity/: cognitive.rs  mod.rs  observer.rs
crates/cli/src/observer/complexity/: ccn.rs  cognitive.rs  mod.rs  observer.rs
crates/cli/src/observer/docs/: corpus.rs  coverage.rs  drift.rs  freshness.rs  hotspot.rs  link_health.rs  markdown.rs  mod.rs  orphan_pages.rs  todo_density.rs  walk.rs
crates/cli/src/observer/shared/: file_role.rs  git.rs  lang.rs  mod.rs  walk.rs
crates/cli/src/observer/test/: coverage.rs  hotspot.rs  lcov.rs  mod.rs  skip_ratio.rs
crates/cli/tests/: core_compaction.rs  core_config.rs  core_doc_pairs.rs  core_eventlog.rs  core_paths.rs  core_snapshot.rs  core_state.rs  observer_change_coupling.rs  observer_churn.rs  observer_code_change_coupling.rs  observer_code_churn.rs  observer_code_complexity_observer.rs  observer_code_duplication.rs  observer_code_hotspot.rs  observer_code_loc.rs  observer_complexity.rs  observer_complexity_observer.rs  observer_doc_coverage.rs  observer_doc_drift.rs  observer_doc_freshness.rs  observer_doc_layer_b.rs  observer_docs_coverage.rs  observer_docs_drift.rs  observer_docs_freshness.rs  observer_docs_layer_b.rs  observer_duplication.rs  observer_hotspot.rs  observer_loc.rs  observer_test_coupling_drift.rs  observer_test_coverage.rs  observer_test_is_test_file.rs  observer_test_skip_ratio.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  eventlog.rs  history.rs  lib.rs  paths.rs  snapshot.rs  state.rs
crates/core/tests/: config.rs  eventlog.rs  history.rs  paths.rs  snapshot.rs  state.rs
crates/observer/: Cargo.toml
crates/observer/queries/rust/: functions.scm
crates/observer/src/: change_coupling.rs  churn.rs  duplication.rs  git.rs  hotspot.rs  lang.rs  lib.rs  loc.rs  walk.rs
crates/observer/src/complexity/: cognitive.rs  mod.rs  observer.rs
crates/observer/tests/: change_coupling.rs  churn.rs  complexity.rs  complexity_observer.rs  duplication.rs  hotspot.rs  loc.rs
crates/observer/tests/common/: mod.rs
docs/: .gitignore  (+3 more)
(+102 files in other folders)
