[workspace]
members = ["crates/cli", "crates/core", "crates/observer"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Kazuyuki SUZUKI"]
repository = "https://github.com/kechol/heal"
rust-version = "1.85"

[workspace.dependencies]
heal-core = { path = "crates/core", version = "0.1.0" }
heal-observer = { path = "crates/observer", version = "0.1.0" }

anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
include_dir = "0.7"
flate2 = "1.0"
tempfile = "3"
tokei = { version = "14", default-features = false }
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
ignore = "0.4"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
