[package]
name = "heal-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HEAL command-line interface (binary `heal`)"

[lints]
workspace = true

[features]
# Forward heal-observer's language gates so `cargo install heal-cli
# --no-default-features --features lang-rust` builds a smaller binary.
default = ["lang-ts", "lang-rust"]
lang-ts = ["heal-observer/lang-ts"]
lang-rust = ["heal-observer/lang-rust"]

[[bin]]
name = "heal"
path = "src/main.rs"

[dependencies]
heal-core = { workspace = true }
heal-observer = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
include_dir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
