[package]
name = "heal-cli"
description = "Hook-driven Evaluation & Autonomous Loop — code-health harness CLI for AI coding agents"
documentation = "https://docs.rs/heal-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

# Files shipped to crates.io. The default Cargo logic only walks `src/`,
# `Cargo.toml`, `Cargo.lock`, and a few common docs — `skills/` and
# `queries/` would be silently dropped, breaking `include_dir!` and
# `include_str!` in the published tarball.
include = [
    "src/**/*",
    "tests/**/*",
    "skills/**/*",
    "queries/**/*.scm",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

[lints]
workspace = true

[features]
# Keeps TypeScript and Rust as the default-enabled grammars. JavaScript
# support is deferred to a later release along with `.js` / `.jsx` query
# files.
default = ["lang-ts", "lang-rust"]
lang-ts = ["dep:tree-sitter-typescript"]
lang-js = ["dep:tree-sitter-javascript"]
lang-py = ["dep:tree-sitter-python"]
lang-go = ["dep:tree-sitter-go"]
lang-scala = ["dep:tree-sitter-scala"]
lang-rust = ["dep:tree-sitter-rust"]

[lib]
name = "heal_cli"
path = "src/lib.rs"

[[bin]]
name = "heal"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
include_dir = { workspace = true }
tokei = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
tree-sitter-scala = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
ignore = { workspace = true }
git2 = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
git2 = { workspace = true }
