[package]
name = "heal-observer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Metric observers (LOC, AST, churn, duplication, doc skew) for HEAL"

[lints]
workspace = true

[dependencies]
heal-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
