[package]
name = "heal-observer"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Metric observers (LOC, AST, churn, duplication, doc skew) for HEAL"

[lints]
workspace = true

[dependencies]
heal-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokei = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-rust = { workspace = true }
ignore = { workspace = true }
git2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
